--- a/index.ipynb
+++ b/index.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This short lesson summarizes the topics we covered in section 26 and why they'll be important to you as a data scientist.\n",
+    "In this section, you learned the fundamentals of Linear Algebra. An understanding of Linear Algebra will help you better understand the underlying mathematics behind some machine learning algorithms.\n",
     "\n",
     "## Objectives\n",
     "You will be able to:\n",
@@ -49,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
